--- a/index.html
+++ b/index.html
@@ -12,16 +12,44 @@
         <h1>Bageopskrift til brownies</h1>
     <h1>
       Dejlig klassisk chokoladebrownie med valnødder.</h1>
-      
-      <p>Perfekt til en velbrygget kop kaffe, eller et stort glas mælk. Du kan sagtens bage din brownie dagen
-      inden den skal serveres, den bliver faktisk kun bedre af at stå natten
-      over - selvom det kan være svært, at lade sådan en skøn brownie stå til
-      næste dag. Og så gør det ikke noget at du underbager den lidt, den må
-      gerne være godt blød og svampet i konsistensen.
-      </p>
-    <img src="https://media.snl.no/media/134188/standard_compressed_sweet-dish-food-fresh-chocolate-baking-819873-pxhere.com.jpg" width="500" height="500"
-    >
+    <img src="https://c.pxhere.com/photos/cb/a1/cake_dessert_food_nut_walnut-131292.jpg!d" 
+    width="auto" height="auto"/>
     </header>
+
+    <!DOCTYPE html>
+<html>
+<head>
+<style>
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto;
+  background-color: #2196F3;
+  padding: 10px;
+}
+.grid-item {
+  background-color: rgba(255, 255, 255, 0.8);
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  padding: 20px;
+  font-size: 30px;
+  text-align: center;
+}
+</style>
+</head>
+<body>
+
+<div class="grid-container">
+  <div class="grid-item">Perfekt til en velbrygget kop kaffe, eller et stort glas mælk</div>
+  <div class="grid-item">Du kan sagtens bage din brownie dagen inden den skal serveres</div>
+  <div class="grid-item">Den bliver kun bedre af at stå natten over</div>  
+  <div class="grid-item">Selvom det kan være svært, at lade sådan en skøn brownie stå til næste dag</div>
+  <div class="grid-item">Så gør det heller ikke noget at du underbager den lidt, den må gerne være godt blød og svampet i konsistensen.</div>
+</div>
+
+</body>
+</html>
+
+
+
     <section>
     <h2>Ingredienser:</h2>
     
